--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
       <label>ชื่อร้านไอศกรีม</label>
       <input id="storeNameInput" type="text" placeholder="เช่น ร้านไอติมแมว" />
       <button id="startBtn" class="fancy-btn">เริ่มเกม</button>
-      <p class="hint">ระบบจะเริ่มจับเวลาเมื่อกด “เริ่มเกม”</p>
+ <p class="hint" style="text-align: left;;">
+  ระบบจะเริ่มจับเวลาเมื่อกด “เริ่มเกม” <br>
+  จุดประสงค์ของการพัฒนาเกมนี้ขึ้น <br><br>
+
+  1. พัฒนาการอ่านภาษาไทย <br>
+  เกมนี้ออกแบบมาเพื่อช่วยให้ผู้เล่นฝึกอ่านคำศัพท์ภาษาไทยอย่างสนุกสนาน ผ่านการเลือกคำตอบที่ถูกต้องในแต่ละคำถาม <br><br>
+
+  2. ส่งเสริมความรู้เรื่องมาตราตัวสะกด <br>
+  ผู้เล่นจะได้เรียนรู้และจดจำวิธีสะกดคำในภาษาไทยตามมาตราตัวสะกดต่าง ๆ โดยจำลองสถานการณ์ให้เหมือนกับการทำงานในร้านไอติม <br><br>
+
+  3. กระตุ้นความสนใจและความร่วมมือ <br>
+  การเล่นเกมในรูปแบบร้านไอติม ทำให้ผู้เรียนเกิดแรงจูงใจ และมีส่วนร่วมกับเนื้อหาอย่างสนุกสนาน มากกว่าการเรียนแบบปกติ <br><br>
+</p>
+
     </div>
   </section>
 
